--- a/GuitarShop/Views/Home/Index.cshtml
+++ b/GuitarShop/Views/Home/Index.cshtml
@@ -2,7 +2,7 @@
     ViewBag.Title = "Home";
 }
 
-<h1>Welcome to the Guitar Shop! Connor John Arends</h1>
+<h1>Welcome to the Guitar Shop!</h1>
 
 <p>Make yourself at home and check out some cool instruments.</p>
 
