--- a/GuitarShop/Views/Product/Details.cshtml
+++ b/GuitarShop/Views/Product/Details.cshtml
@@ -6,9 +6,9 @@
 <h1>Product Details</h1>
 <div class="row">
     <div class="col-sm-4">
-        <img src="~/images/@ViewBag.ImageFilename" 
-             alt="@Model.Name Image" 
-             class="img-responsive center-block"/>
+        <img src="~/images/@ViewBag.ImageFilename"
+             alt="@Model.Name Image"
+             class="img-responsive center-block" />
     </div>
 
     <div class="col-sm-8">
@@ -24,12 +24,14 @@
             </tr>
             <tr>
                 <td>Your Price:</td>
-                <td>@Model.DiscountPrice.ToString("C") 
-                (You save @Model.DiscountAmount.ToString("C"))</td>
+                <td>
+                    @Model.DiscountPrice.ToString("C")
+                    (You save @Model.DiscountAmount.ToString("C"))
+                </td>
             </tr>
         </table>
         <a asp-controller="Cart" asp-action="Add"
-            asp-route-id="@Model.Slug" class="btn btn-primary">Add to Cart</a>
-        
+           asp-route-id="@Model.Slug" class="btn btn-primary">Add to Cart</a>
+
     </div>
 </div>
